--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.2",
     "@supabase/supabase-js": "^2.91.0",
+    "dotenv": "^17.2.3",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
