--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^1.1.2",
-    "@supabase/supabase-js": "^2.91.0",
-    "dotenv": "^17.2.3",
-    "next": "16.1.4",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "sharp": "^0.34.5",
-    "viem": "^2.45.1",
-    "wagmi": "^3.4.2"
-  },
+    "@coinbase/onchainkit": "0.33.0",
+    "@supabase/supabase-js": "^2.45.1",
+    "dotenv": "^16.4.5",
+    "next": "15.1.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "sharp": "^0.33.5",
+    "viem": "2.21.0",
+    "wagmi": "2.12.0"
+},
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
