--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coinbase/onchainkit": "0.33.0",
     "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/react-query": "^5.90.20",
     "dotenv": "^16.4.5",
     "next": "15.5.11",
     "react": "19.0.0",
@@ -18,7 +19,7 @@
     "sharp": "^0.33.5",
     "viem": "2.45.1",
     "wagmi": "2.19.5"
-},
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
