--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.90.20",
     "dotenv": "^16.4.5",
-    "next": "15.5.11",
+    "next": "^15.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sharp": "^0.33.5",
@@ -21,6 +21,7 @@
     "wagmi": "2.19.5"
   },
   "devDependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
