--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coinbase/onchainkit": "0.33.0",
     "@farcaster/frame-sdk": "^0.1.14",
+    "@farcaster/frame-wagmi-connector": "^1.0.1",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.90.20",
     "dotenv": "^16.4.5",
