--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "0.33.0",
     "@farcaster/frame-sdk": "^0.1.14",
     "@farcaster/frame-wagmi-connector": "^1.0.1",
+    "@farcaster/miniapp-wagmi-connector": "^1.1.1",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.90.20",
     "dotenv": "^16.4.5",
